# forge-core

./: AGENTS.md  Cargo.toml  Dockerfile.builder  Makefile  README.md  VOLUME_CONTROL_IMPLEMENTATION.md  package.json  test.db  test_volume_config.rs
.sqlx/: query-00356e3b36dc58d6b51d1c2ca7be2ea61f38a770221a81c74ed50a30d5641f02.json  query-00511023219093b49ef66b8249313d2e8bbdc0ecd1fa9b77f9a449db785cf1bf.json  query-03246cd63a18c6c0f0ba477442618482ae0ff82566c4a9edf36e8d5cd46e378a.json  query-0389dc2eafa112b1068c936fdb3fe0fa240f7989e978437f1d707ac4f163d6d3.json  query-0dc91e4169ecf7c5b9559522629671e4b203407ef310bc4329c931ac5bbda94e.json  query-1198c8c880edd25feddd0a7c476739a27388a095fff6f401f464efb996f25b8d.json  query-1382f7166364378bcc775e7384c1b1333838d177d78bea56c6a192494b610a0a.json  query-1a2bae8f283114f79dd8d265a6b9f73412971ad76736b155f625a45ed9cfd985.json  query-1b96367804b5b0aee316ecced6d44439c7dc9e8f480fc9262e5f96382b6581e2.json  query-22fc43e342dee696bc2ca34c3ed1cfff70cd2615398911f7061b4347363150e0.json  query-2f20e36f4043fe228bbbe0c2ff34e2d75e178829e4667ca7aa3855c3da70995b.json  query-32b7f24512c085ebb2d82c1275a9a0b8d9c6a6b7d63f0facb5abcdaa492bfb1c.json  query-3c2ea4a805125f2a80cd5b144152fec901dd61f4d12cf4530c66ac9e212d8fbe.json  query-426b7f9a407ff2d7ce4533d02af4f563d8313f47c30fac6d8c7721880a783fb6.json  query-46fb19514fa21a10c5162c49c8201ee3f80b3a69f18a87c02e66f27bf3f6a8fe.json  query-520bb43d93e520a05c0d748f3ebe8fac8facfbd19c7928ead5e54a277a952d2c.json  query-522861355abe242758ff2ab172bec02a100fe570d0a84194c938d9a316306636.json  query-56c5a0b739fe0e2248a4efaca11bdc8eb0760c55a779310bd97f3f9534f19b1a.json  query-58231cba11482caefcec9dfa0398029e572528bea516a421bd2ee3c37e6aa704.json  query-5a6258c8449ba84818f1115a1f80ce6825b7dad16594bf61c3d68ed543ecd146.json  query-5b463e46b8631a2434d943e400c279cccb9ce46c1f71b6b0aae9bd291403be45.json  query-6a66d1afd8b3d726cb98de86bf0b304e0e74149cd43e58380f2f4e33c1a5e311.json  query-75ce945812c1f3bc40ed098fbb019d9a22d451e01ff59be39229f57466f7ba0e.json  query-87dbcdf3dc85ba5e34a63769c08ef323ffa50630517742bf81f027d5ebb29bdb.json  (+17 more)
crates/db/: Cargo.toml
crates/db/.sqlx/: query-1030c2e1d6377951422bc57234a62fffe3f7954b3a97e6066604e3215b7b843d.json  query-15ecf642b9f2117327f1975540455f50c0d44d386c5bd75be62c41869da4f545.json  query-3ff5627eaf103324c7790657b4f007e592858854fa1a97f83b9f75dd79856b5f.json  query-425f6d5bb7cd12fdc97a2eb62371d1c5da479a74aeb8ac68132b36e6c96c2bd1.json  query-47f30a130353754feb44cfbbb02e37522d9eda55d417632c0d3d82ddef0d1c73.json  query-580cd69db122870eb21ff98e842c7bbfcc5a46a949845a0250a6fdae9e7d34ed.json  query-5c883cd0ab7aa92b087e2284ce459ac72756ec656a0ef7e581a5556c98792c27.json  query-63362af74c160121fc41fe1e4017fd18ae12da034bf55d2d2a2e33dab83c945f.json  query-74b10a43e24f14b32be59b82fcdaef6a73c86510324554d086819d6bd6ed30ab.json  query-850bdcaec59c2cd96792daaeea666c7934de7bd2a75953593e15eb72221ec052.json  query-888f133eb8d9a03fe8bc98a6c750f2421c2fe8a3199b5966b42091a3c609b3cc.json  query-a1c8dd0faa613621545655bdfcda7a2d0ed49baff4cc0880274a4836a5e2ea54.json  query-bba1015af0f354c3e00c018f45304c4a0c02afffa3fe223d2e3e830da2b3d53c.json  query-cddf0d35d06513aed2d07a9733ba88649aa33c12ef88805294f5258ad793aad2.json  query-e8edb7cdb1b29ea658d2f6c9ff9f37ef6b8aaa1b1a35c945a19c272288c75ddc.json  query-effb033bc80a26cf1cc85d07695c0ae56dea079e4108e4d0d3936aa6a25536ca.json  query-f33d194f4d57f5fc9073ca935ce6571c85686cebc0f0bf0616a8f1489bbe4766.json
crates/db/migrations/: 20251127000000_add_commit_message_to_executor_sessions.sql  20251127100000_create_execution_runs.sql  20251127100000_execution_runs_and_commit_support.sql  20251127100001_add_commit_prompt_to_projects.sql  20251127100002_add_composite_indexes.sql  20251127100003_make_executor_sessions_task_attempt_id_nullable.sql  20251212100000_add_variant_to_execution_runs.sql  20251217000000_fix_forge_task_attempt_config_type.sql  20251218214153_add_initializing_status.sql  README.md
crates/db/src/: lib.rs
crates/db/src/models/: draft.rs  execution_process.rs  execution_process_logs.rs  execution_run.rs  executor_session.rs  image.rs  merge.rs  mod.rs  project.rs  tag.rs  task.rs  task_attempt.rs
crates/deployment/: Cargo.toml
crates/deployment/src/: lib.rs
crates/local-deployment/: Cargo.toml
crates/local-deployment/src/: command.rs  container.rs  lib.rs
(+152 files in other folders)
