[package]
name = "forge-core-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Database layer for Forge - SQLite-based persistence for tasks, attempts, and state"
include = ["src/**/*", "migrations/**/*", ".sqlx/**/*", "Cargo.toml"]

[dependencies]
forge-core-utils = { workspace = true }
forge-core-executors = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "sqlite-preupdate-hook", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
ts-rs-forge = { workspace = true }
async-trait = "0.1"
regex = "1.11.1"
sentry-tracing = { version = "0.41.0", features = ["backtrace"] }
futures-util = "0.3"
strum = "0.27.2"
strum_macros = "0.27.2"

