[package]
name = "forge-core-deployment"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Deployment abstractions for Forge - handles local and cloud deployment strategies"

[dependencies]
forge-core-db = { workspace = true }
forge-core-utils = { workspace = true }
forge-core-services = { workspace = true }
forge-core-executors = { workspace = true }
async-trait = "0.1"
thiserror = { workspace = true } 
anyhow = { workspace = true }
tokio = { workspace = true }
sqlx = "0.8.6"
serde_json = { workspace = true }
tracing = { workspace = true }
git2 = "^0.18.1"
futures = "0.3.31"
axum = { workspace = true }

