[package]
name = "forge-core-local-deployment"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Local deployment implementation for Forge - manages worktrees and local task execution"

[dependencies]
forge-core-db = { workspace = true }
forge-core-executors = { workspace = true }
forge-core-deployment = { workspace = true }
forge-core-services = { workspace = true }
forge-core-utils = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.0"
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "sqlite-preupdate-hook", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
ts-rs-forge = { workspace = true }
async-trait = "0.1"
rust-embed = "8.2"
ignore = "0.4"
command-group = { version = "5.0", features = ["with-tokio"] }
nix = { version = "0.29", features = ["signal", "process"] }
openssl-sys = { workspace = true }
regex = "1.11.1"
notify-rust = "4.11"
notify = "8.2.0"
notify-debouncer-full = "0.5.0"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
async-stream = "0.3"
json-patch = "2.0"
tokio = { workspace = true }
tokio-stream = { version = "0.1.17", features = ["sync"] }
